# hydroshoot

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CITATION.bib  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.rst  appveyor.yml  dvlpt_requirements.txt  pyproject.toml  setup.cfg  setup.py  travis.yml
.github/workflows/: conda-package-build.yml  openalea_ci.yml
.pkglts/: pkg_cfg.json  pkg_hash.json
conda/: environment.yml  meta.yaml
conda_hydroshoot/: bld.bat  meta.yaml
doc/: Makefile  conf.py  ecophysio.rst  ecophysio_solver.rst  energy.rst  environment.yml  exchange.rst  hydraulic.rst  index.rst  installation.rst  make.bat  model_description.rst  overview.rst  refs.rst  usage.rst
doc/_build/doctrees/: authors.doctree  contributing.doctree  ecophysio.doctree  ecophysio_solver.doctree  energy.doctree  environment.pickle  exchange.doctree  history.doctree  hydraulic.doctree  index.doctree  index_new.doctree  installation.doctree  model_description.doctree  overview.doctree  readme.doctree  refs.doctree  usage.doctree
doc/_build/html/: .buildinfo  authors.html  contributing.html  ecophysio.html  ecophysio_solver.html  energy.html  exchange.html  genindex.html  history.html  hydraulic.html  index.html  index_new.html  installation.html  model_description.html  objects.inv  overview.html  readme.html  refs.html  search.html  searchindex.js  usage.html
doc/source/: conf.py  index.rst
example/: README.txt  potted_syrah.py
example/figs/: paper_figs.py  table_1.csv
example/gdc_can1_grapevine/: digit.input  meteo.input  params.json  psi_soil.input  sapflow.obs  sim.py  var.obs
example/gdc_can1_grapevine/_output/: mtg20120801000000.pckl  mtg20120801010000.pckl  mtg20120801020000.pckl  mtg20120801030000.pckl  mtg20120801040000.pckl  mtg20120801050000.pckl  mtg20120801060000.pckl  mtg20120801070000.pckl  mtg20120801080000.pckl  mtg20120801090000.pckl  mtg20120801100000.pckl  mtg20120801110000.pckl  mtg20120801120000.pckl  mtg20120801130000.pckl  mtg20120801140000.pckl  mtg20120801150000.pckl  mtg20120801160000.pckl  mtg20120801170000.pckl  mtg20120801180000.pckl  mtg20120801190000.pckl  mtg20120801200000.pckl  mtg20120801210000.pckl  mtg20120801220000.pckl  mtg20120801230000.pckl  mtg20120802000000.pckl  mtg20120802010000.pckl  mtg20120802020000.pckl  mtg20120802030000.pckl  mtg20120802040000.pckl  (+69 more)
example/gdc_can2_grapevine/: digit.input  params.json  psi_soil.input  sapflow.obs  sim.py  var.obs
example/gdc_can3_grapevine/: digit.input  params.json  psi_soil.input  sapflow.obs  sim.py  var.obs
example/gdc_grapevine/: params.json  sim.py
example/misc/: HSdanugue$5132.csv  sim.py
example/network_api/: quickstart.py
example/potted_grapevine/: params.json  potted_syrah.py  psi_soil.input  sim.py  sim_with_preprocessed_inputs.py  weather.csv
example/vsp_ws_grapevine/: gas.obs  meteo.input  params.json  sim.py  temp.obs
example/vsp_ww_grapevine/: gas.obs  meteo.input  params.json  sim.py  temp.obs
hydroshoot_data/: params.json
src/hydroshoot/: Application_test.py  BWB_gs.py  HSArc.py  HSCaribu.py  HSEnergy.py  HSExchange.py  HSHyd.py  HSVisu.py  README.md  __init__.py  architecture.py  constants.py  core.py  data.py  data_access.py  display.py  energy.py  exchange.py  hydraulic.py  initialisation.py  io.py  irradiance.py  meteo_utils.py  model.py  network.py  params.py  params_schema.json  preprocess.py  primitive.py  soil.py  solver.py  utilities.py  version.py
src/hydroshoot_data/: grapevine_pot_meteo.csv  params.json  params_schema.json
test/: __init__.py  data.py  non_regression_data.py  test_architecture.py  test_energy.py  test_exchange.py  test_hydraulic.py  test_irradiance.py  test_model.py  test_soil.py  test_utilities.py
test/data/: _reference_time_series.csv  digit_twin_pots.csv  grapevine_pot.csv  params.json  reference_time_series.output
(+157 files in other folders)
